data/derived/fa15/progs/unify/prog0697.ml.out
Characters 186-187:
  | Average (e1, e2)	  -> ((eval e +. eval e) /. 2)((eval e +. eval e) /. 2)
                                 ^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
